force-app/main/default/objects/Evaluation__c/fields/EvaluatorComments__c.field-meta.xml
<CustomField>
    <fullName>EvaluatorComments__c</fullName>
    <label>Evaluator Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>