force-app/main/default/objects/Evaluation__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <formula>Application_Slot_Booking__r.Panel_Master__r.PanelName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel</label>
    <type>Text</type>
</CustomField>