force-app/main/default/objects/Evaluation__c/fields/SlotCode__c.field-meta.xml
<CustomField>
    <fullName>SlotCode__c</fullName>
    <formula>Application_Slot_Booking__r.SlotMaster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slot Code</label>
    <type>Text</type>
</CustomField>