force-app/main/default/objects/Evaluation__c/fields/SlotDate__c.field-meta.xml
<CustomField>
    <fullName>SlotDate__c</fullName>
    <formula>Application_Slot_Booking__r.SlotMaster__r.SlotDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slot Date</label>
    <type>Date</type>
</CustomField>