force-app/main/default/objects/Evaluation__c/fields/SlotEndTime__c.field-meta.xml
<CustomField>
    <fullName>SlotEndTime__c</fullName>
    <formula>Application_Slot_Booking__r.SlotMaster__r.SlotEndtime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slot End Time</label>
    <type>Time</type>
</CustomField>