force-app/main/default/objects/Evaluation__c/fields/SlotStartTime__c.field-meta.xml
<CustomField>
    <fullName>SlotStartTime__c</fullName>
    <formula>Application_Slot_Booking__r.SlotMaster__r.SlotStartTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slot Start Time</label>
    <type>Time</type>
</CustomField>